# havaintopallo

./: .gitignore  README.md  pyproject.toml
examples/: grid_hirlam.xml  point_harmonie.xml
havaintopallo/: conversion.py  download.py
havaintopallo/tools/: convert_ptso_xml.py  download_ptso_xml.py  ptso_xml_to_jsonl.py
javaintopallo/: index.js
tests/: test_hp.py
