[project]
name = "havaintopallo"
version = "0.1.0"
description = "Utilities for downloading & converting FMI data (observation time series only at this point)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
