[project]
name = "havaintopallo"
version = "0.1.0"
description = "Utilities for downloading & converting FMI data (observation time series only at this point)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.0",
]

[project.optional-dependencies]
zstd = [
    "zstandard>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I",
]
